fix video on mobile

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1610,7 +1610,7 @@ modal-popup :is(.modal-overlay) {
   }
   .tooltip-content {
     background: var(--color-dark);
-    color: var(--color-white);
+    color: rgb(var(--color-white));
     line-height: 1;
     max-width: 360px;
     z-index: 2;
